// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks Api HTTP GET 1`] = `"GET"`;

exports[`Hooks Api HTTP POST 1`] = `
Object {
  "method": "POST",
  "name": "Lxxyx",
}
`;

exports[`Hooks Api IoC 1`] = `
Array [
  "Miao~",
  "Miao~",
  "Miao~",
]
`;

exports[`Hooks Api IoC 2`] = `
Object {
  "find": Array [
    "Local",
  ],
  "findAll": Array [
    "Miao~",
    "Miao~",
    "Miao~",
  ],
}
`;

exports[`Hooks Api get request context 1`] = `
Object {
  "path": "/api/getContext",
}
`;

exports[`Hooks Api return object 1`] = `
Object {
  "message": "Hello World!",
}
`;

exports[`Hooks Api return string 1`] = `"Hello World"`;
